// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTitle renders correctly with a song 1`] = `
<div>
  <div
    class="flex flex-col items-center text-center"
  >
    <h3
      class="text-xl font-bold dark:text-bg-light"
    >
      Test Song
    </h3>
    <p
      class="text-gray-500 dark:text-gray-400"
    >
      Test Artist
    </p>
  </div>
</div>
`;

exports[`SongTitle renders correctly without a song 1`] = `
<div>
  <div
    class="flex flex-col items-center text-center"
  >
    <h3
      class="text-xl font-bold dark:text-bg-light"
    >
      Loading...
    </h3>
    <p
      class="text-gray-500 dark:text-gray-400"
    >
      ...
    </p>
  </div>
</div>
`;
